[package]
name = "solana-escrow"
version = "0.2.0"
edition = "2018"
license = "WTFPL"
publish = false

[features]
no-entrypoint = []

[dependencies]
solana-program = "=1.7.11"
thiserror = "1.0.24"
arrayref = "0.3.6"
spl-token = {version = "3.2.0", features = ["no-entrypoint"]}

[lib]
crate-type = ["cdylib", "lib"]
